2004-01-07 Karl Trygve Kalleberg <karltk@gentoo.org>
	* Added Makefile