@@ -18,8 +18,9 @@ use Text::Wrap;
 $Text::Wrap::columns = 79;
 $Text::Wrap::unexpand = 0;
 
+# Global variables
 my @files = ();
-my ($input, $entry, $user, $date, $text, $version);
+my ($input, $entry, $user, $date, $text, $version, $year);
 my %versions = ();
 
 # Read the current ChangeLog
@@ -30,10 +31,8 @@ if (-f 'ChangeLog') {
 } else {
     # No ChangeLog here, maybe we should make one...
     if (<*.ebuild>) {
-        my ($portdir) = `/usr/bin/portageq portdir 2>/dev/null`;
-        chomp($portdir);
-        open I, "<$portdir/skel.ChangeLog"
-            or die "Can't open $portdir/skel.ChangeLog for input: $!\n";
+        open I, '<../../skel.ChangeLog' 
+            or die "Can't open ../../skel.ChangeLog for input: $!\n";
         { local $/ = undef; $text = <I>; }
         close I;
         my ($cwd) = getcwd();
@@ -81,14 +80,22 @@ while (<C>) {
 	# other cvs output is ignored
 }
 close C;
-die "No changed files found (did you forget to cvs add?)\n" unless @files;
+
+# Allow ChangeLog entries with no changed files, but give a fat warning
+unless (@files) {
+	print "**\n\n";
+	print "** NOTE: No changed files found.  Normally echangelog should\n";
+	print "** be run after all affected files have been added and/or\n";
+	print "** modified.  Did you forget to cvs add?\n";
+	print "**\n\n";
+}
 
 # Get the input from the cmdline or stdin
 if ($ARGV[0]) {
     $input = "@ARGV";
 } else {
     local $/ = undef;
-    print "Please type the log entry, finish with ctrl-d\n";
+    print "Please type the log entry, ctrl-d to finish, ctrl-c to abort\n";
     $input = <>;
 }
 die "Empty entry; aborting\n" unless $input =~ /\S/;
@@ -160,11 +167,43 @@ if (0 && !defined $version) { # <--- NOTE disabled via '0'
 		or die "Failed to insert new entry (4)\n";
 }
 
+sub update_copyright {
+	my ($t) = @_;
+	my ($year) = strftime('%Y', localtime);
+	$t =~ s/^# Copyright \d+(?= )/$&-$year/m or
+	$t =~ s/^(# Copyright \d+)-(\d+)/$1-$year/m;
+	return $t;
+}
+
+# Update the copyright year in the ChangeLog
+$text = update_copyright($text);
+
 # Write the new ChangeLog
 open O, '>ChangeLog.new' or die "Can't open ChangeLog.new for output: $!\n";
 print O $text            or die "Can't write ChangeLog.new: $!\n";
 close O                  or die "Can't close ChangeLog.new: $!\n";
 
-# Move things around
+# Update affected ebuild copyright dates
+for my $e (grep /\.ebuild$/, @files) {
+	my ($etext, $netext);
+	open E, "<$e" or warn("Can't read $e to update copyright year\n"), next;
+	{ local $/ = undef; $etext = <E>; }
+	close E;
+
+	# Attempt the substitution and compare
+	$netext = update_copyright($etext);
+	last if $netext eq $etext;
+
+	# Write the new ebuild
+	open E, ">$e.new" or warn("Can't open $e.new\n"), next;
+	print E $netext and
+	close E or warn("Can't write $e.new\n"), next;
+
+	# Move things around and show the diff
+	system "diff -u $e $e.new";
+	rename "$e.new", $e or warn("Can't rename $e.new: $!\n");
+}
+
+# Move things around and show the ChangeLog diff
 system 'diff -Nu ChangeLog ChangeLog.new';
-rename 'ChangeLog.new', 'ChangeLog' or die "Can't rename: $!\n";
+rename 'ChangeLog.new', 'ChangeLog' or die "Can't rename ChangeLog.new: $!\n";
